fix: increase padding in popup content for better spacing

--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -191,7 +191,7 @@
 
 .popup-content {
    position: absolute;
-   padding: 20px;
+   padding: 50px;
    margin: 40px;
    background-color: #ffffff;
    border-radius: 7px;
